# COMP-3150-Coffee-Maker

./: .gitignore  CMakeLists.txt  CoffeeMaker.cpp  CoffeeMaker.h  Makefile  README.md  main.cpp  sleep.cpp  sleep.h
component/: Boiler.h  Carafe.h  HotPlate.h
helpers/: Indicators.hpp  ProgressBar.h  StringFormatter.h
state/: BoilerState.h  CarafeState.h  CoffeeMakerState.h  HeaterState.h
type/: Fillable.h  Heatable.h  Heater.h  Readable.h  StateChanges.h  Tank.h
